<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/leave_reasons"
        android:checkableBehavior="single">
        
        <item
            android:id="@+id/leave_reason_holiday"
            android:title="@string/leave_reason_holiday" />
        <item
            android:id="@+id/leave_reason_vacation"
            android:title="@string/leave_reason_vacation" />
        <item
            android:id="@+id/leave_reason_leave"
            android:title="@string/leave_reason_leave" />

        <item
            android:id="@+id/leave_reason_health"
            android:title="@string/leave_reason_health" />

        <item
            android:id="@+id/leave_reason_other"
            android:title="@string/leave_reason_other" />

    </group>
</menu>