<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dialog_leave_record_start_date"
        android:paddingTop="8dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/form_start_date_preview"
            android:textSize="24dp"
            android:singleLine="true"
            android:enabled="true"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Heute"
            android:id="@+id/form_start_date_today"
            android:layout_alignParentStart="true"
            android:width="100dp"
            style="?android:attr/borderlessButtonStyle" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dialog_leave_record_end_date"
        android:paddingTop="16dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/form_end_date_preview"
            android:textSize="24dp"
            android:singleLine="true"
            android:enabled="true"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Heute"
            android:id="@+id/form_end_date_today"
            android:layout_alignParentStart="true"
            android:width="100dp"
            style="?android:attr/borderlessButtonStyle" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dialog_leave_record_reason"
        android:paddingTop="16dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/form_reason_preview"
            android:textSize="24dp"
            android:singleLine="true"
            android:enabled="true"
            android:editable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_weight="1" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="100dp"
            android:minHeight="2dp"/>
    </LinearLayout>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/dialog_leave_record_workday"
        android:id="@+id/form_workday_switch"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall"/>


</LinearLayout>